Changelog
=========

2.0dev - unreleased
-------------------

* Updated forked registerUtility method to match the zope.component 3.7.1
  code base. This fixes the two bugs with the implicit unregistration of
  utilities for existing interface / name pairs.
  [hannosch]

* Simplified some code, aq_parent now respects __parent__ pointers.
  [hannosch]

2.0a1 - 2009-05-27
------------------

* Updated to use IObjectMovedEvent from zope.lifecycleevent instead of
  zope.container. We require zope.lifecycleevent >= 3.5.2 now.
  [hannosch]

* Removed package dependencies that did collide with the KGS of Zope 2.12.
  [yuppie]

* Adjusted code to use the new zope.site and zope.container packages and use
  the ISite interface from zope.location.
  [hannosch]

* Specify all package dependencies including Acquisition and Zope2. You need
  to use either the eggified Zope 2.12 or create fake-eggs for these.
  [hannosch]

* 'make_site' no longer stores the path of the site manager in its name. This
  way the name can't become out-dated. PersistentComponents' __repr__ method
  now returns the current path instead of the name of the site manager.
  [yuppie]

* Requiring zope.component >= 3.5.0.
  [icemac]


1.0 - 2008-11-18
----------------

* Utilities registered with an absolute path were returned with the
  RequestContainer in the aq_chain. As the result of the first utility
  look-up is stored in the adapter look-up cache, subsequent utility
  look-ups return the utlitiy with the RequestContainer of the first
  look-up.
  
  Solution: For utilities registered with an absolute path the
  RequestContainer is now also removed at look-up.
  [icemac]


1.0c1 - 2008-08-27
------------------

* Added buildout for project, so testing can be done using ``bin/test``.
  [icemac]

* Added ability to register utilities with an absolute path. These
  utilities are returned wrapped into their original context. This
  change is backward compatible to existing registries.
